[tool.poetry]
name = "grokking_algorithms"
version = "0.1.0"
description = ""
authors = ["Mikhail Davydov <mdavydov83@gmail.com>"]

packages = [
  { include = "grokking_algorithms" },
]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
autopep8 = "^1.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

